--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,47 +2,55 @@ version: "3.9"
 
 services:
   app:
-    image: node-app:v1.0.0
-    container_name: app
+    image: car-sales:v1.0.1
+    container_name: car-sales
     build:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "3333:3000"
+      - 3333:3000
     networks:
-      - my-node-app
+      - car-sales-app
+    profiles:
+      - all
+      - app
 
   db:
     image: postgres
-    hostname: postgres
+    hostname: localhost
     container_name: db
     environment:
-      POSTGRES_PASSWORD: "test_pass"
-      POSTGRES_USER: "test_user"
-      POSTGRES_DB: "test_db"
+      POSTGRES_PASSWORD: test_pass
+      POSTGRES_USER: test_user
+      POSTGRES_DB: test_db
     ports:
-      - "5432:5432"
+      - 5432:5432
     networks:
-      - my-node-app
+      - car-sales-app
     volumes:
       - .db-data:/var/lib/postgresql/data
+    profiles:
+      - all
+      - db
 
   pg-admin:
     image: dpage/pgadmin4
     container_name: pg_admin
     ports:
-      - "8888:80"
+      - 8888:80
     networks:
-      - my-node-app
+      - car-sales-app
     environment:
       PGADMIN_DEFAULT_EMAIL: "admin@domain.com"
       PGADMIN_DEFAULT_PASSWORD: "1234"
-      PGADMIN_DEFAULT_PORT: "80"
+      PGADMIN_LISTEN_PORT: "80"
     volumes:
       - pgadmin-data:/var/lib/pgadmin
+    profiles:
+      - all
+      - db
 
 volumes:
-  db-data:
   pgadmin-data:
 
 networks:
